# Cyber_Landa

./: AGENTS.md  CMakeLists.txt  README.en.md  README.md
resources/: AGENTS.md
src/: main.cpp
src/core/: Achievement.cpp  Achievement.h  AchievementManager.cpp  AchievementManager.h  DatabaseManager.cpp  DatabaseManager.h  GrowthSnapshot.cpp  GrowthSnapshot.h  GrowthSystem.cpp  GrowthSystem.h  GrowthSystemBridge.cpp  GrowthSystemBridge.h  GrowthVisualizer.cpp  GrowthVisualizer.h  InventoryItem.cpp  InventoryItem.h  InventoryManager.cpp  InventoryManager.h  LogEntry.cpp  LogEntry.h  LogManager.cpp  LogManager.h  SerendipityEngine.cpp  SerendipityEngine.h  ShopItem.cpp  ShopItem.h  ShopManager.cpp  ShopManager.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskManager.h.backup  User.cpp  User.h  UserManager.cpp  UserManager.h
src/ui/: AchievementGallery.cpp  AchievementGallery.h  AchievementGallery.ui  CustomizationPanel.cpp  CustomizationPanel.h  CustomizationPanel.ui  DashboardWidget.cpp  DashboardWidget.h  DashboardWidget.ui  GrowthDashboard.cpp  GrowthDashboard.h  GrowthDashboard.ui  LogBrowser.cpp  LogBrowser.h  LogBrowser.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ShopInterface.cpp  ShopInterface.h  ShopInterface.ui  TaskView.cpp  TaskView.h  TaskView.ui  TutorialManager.cpp  TutorialManager.h
